--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tailwindcss/postcss": "^4.0.12",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
     "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-fileupload": "^1.5.1",
